enhance: 优化代码